# reconnected-se

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  flake.nix
.sqlx/: query-2a3e0733947dbb4f70f2fdceb526ad380fd741fe93bf6db30d9a98acc5d876b4.json  query-3e4ea2093a2376ad244f27426cee98c324f886e9b0173614867652c2033bc488.json  query-4096fa16d8eb0160d9a70b2bc4308ee60be97d1823e28571146622f669e28d3a.json  query-54cb0acca9bf07ecde575073c13012d69dcad38b07de6c11f05f2bbc5752dbe3.json  query-582a2007ec0a6b21559477790be73de25c76af4d2faa6b17f981e4c7feb82980.json  query-6da6126e2e3bfc7e3302d57c5edbec2302e74d0a8e8ca272b76e34d89440ef5c.json  query-8636ff9ef6bf0cb184dc2aa8b346773fb5e1c2144e5d7775be43ac764ea6b9d9.json  query-bcd81e46e64eb27a9dbbd87803b7a20fb6d0d1ff3edfd679f3f49cb5ad50c754.json  query-e360daf2e496b3f1fdc356b06c062a2532fea7cd28ae4ef877151c72d5b8e127.json  query-facfe22a3746a7a3a8ce47e9e7782f58225fc2a46d5cdff080e033fdeabe3ff4.json
migrations/: 20250825033436_init.sql
rse-core/: Cargo.toml
rse-core/src/: error.rs  lib.rs  model.rs  repo.rs
rse-core/src/model/: ticker.rs
rse-core/src/repo/: pg.rs
rse-discord/: Cargo.toml
rse-discord/src/: commands.rs  error.rs  lib.rs
rse-discord/src/commands/: portfolio.rs  register.rs  stocks.rs
src/: main.rs
