[package]
name = "rse-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre = "0.6.5"
rse-core.workspace = true
rse-discord.workspace = true
tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
tracing-subscriber = "0.3.19"
tracing = {workspace = true, features = ["release_max_level_trace", "max_level_trace"]}
dotenvy = "0.15.7"

[workspace]
resolver = "3"
members = ["rse-core", "rse-discord"]

[workspace.package]
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
snafu = { version = "0.8.7", features = ["futures", "rust_1_81"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
futures-util = "0.3.31"
uuid = { version = "1.18.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls", "rust_decimal", "uuid"] }
tracing = "0.1.41"

rse-core.path = "./rse-core"
rse-discord.path = "./rse-discord"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
mod_module_files = "forbid"
unwrap_used = "deny"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
mutex_atomic = "warn"
mutex_integer = "warn"
missing_panics_doc = "allow"
